--- a/ios-browser-ui-viewport-bug/angular.json
+++ b/ios-browser-ui-viewport-bug/angular.json
@@ -17,10 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ios-browser-ui-viewport-bug",
+            "outputPath": "dist/ios-viewport-fail",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "baseHref": "/ios-browser-ui-viewport-bug/",
+            "baseHref": "/ios-viewport-fail/",
             "polyfills": [
               "zone.js"
             ],
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ios-browser-ui-viewport-bug:build:production"
+              "browserTarget": "ios-viewport-fail:build:production"
             },
             "development": {
-              "browserTarget": "ios-browser-ui-viewport-bug:build:development"
+              "browserTarget": "ios-viewport-fail:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ios-browser-ui-viewport-bug:build"
+            "browserTarget": "ios-viewport-fail:build"
           }
         },
         "test": {
